--- a/styles/blogs.module.css
+++ b/styles/blogs.module.css
@@ -77,3 +77,18 @@
   line-height: 1.5em;
   color: #25274d;
 }
+
+@media (max-width: 500px) {
+  .content {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+    gap: 2em;
+    text-align: center;
+  }
+  .blog_card_content h3 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+}
