--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -32,7 +32,7 @@
 }
 
 .search_input input {
-    position: relative;
+  position: relative;
   width: 100%;
   height: 50px;
   border: 1px solid #fff;
@@ -50,8 +50,8 @@
 }
 
 .search_input button {
-    position: absolute;
-    left: 70%;
+  position: absolute;
+  left: 70%;
   width: auto;
   padding: 0.35em 1.65em;
   border: none;
@@ -79,6 +79,7 @@
   height: 50px;
   border-radius: 50%;
   margin-right: 1em;
+  cursor: pointer;
 }
 
 .nav_user_data h1 {
@@ -104,4 +105,60 @@
 
 .nav_user_data button:hover {
   background: #5d9db8;
+}
+
+@media (max-width: 500px) {
+  .wrapper {
+    padding: 1.3em 0.2em;
+  }
+  .inner {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .inner h1 {
+    font-size: 2.2em;
+    font-weight: 300;
+  }
+
+  .inner h3 {
+    font-size: 1em;
+    font-weight: 300;
+    margin: 0.3em 0;
+  }
+  .search_input {
+    width: 95%;
+    margin: 0.5em auto;
+  }
+
+  .search_input input {
+    width: 100%;
+  }
+
+  .search_input button {
+    left: 47%;
+  }
+  .nav_user_data {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    width: 97%;
+    margin: 0.5em auto;
+  }
+
+  .nav_user_data img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 1em;
+    cursor: pointer;
+  }
+
+  .nav_user_data h1 {
+    color: #fff;
+    font-size: 1.2em;
+    font-weight: 300;
+    margin: 0;
+  }
 }
