--- a/styles/homepage.module.css
+++ b/styles/homepage.module.css
@@ -18,6 +18,7 @@
   color: #25274d;
   text-decoration: underline;
 }
+
 .inner h2 {
   font-size: 70px;
 }
@@ -39,5 +40,44 @@
   border: none;
   cursor: pointer;
   margin: 1em 0;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 500px) {
+  .inner {
+  text-align: center;
+  width: 95%;
+}
+
+.inner h1 {
+  margin: 0.5em auto;
+  font-size: 2.9em;
+  font-weight: 700;
+  color: #25274d;
+  text-decoration: underline;
+}
+
+.inner p {
+  font-size: 18px;
+  font-weight: 200;
+  color: #727272;
+  line-height: 1.2em;
+}
+
+.inner button {
+  width: 250px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #2e9cca;
+  color: white;
+  font-size: 20px;
+  text-transform: capitalize;
+  border: none;
+  cursor: pointer;
+  margin: 1em 0;
   box-shadow: 1px 1px 5px 5px rgba(0, 0, 0, 0.2);
+}
+.inner button:hover{
+  background: #62a7c5;
+}
 }
